feat: Finaria branding, PWA icon, auth cache, login flow, EAS deploy
- Branding: nombre Finaria, logo en auth, icon/splash/favicon con icon.png
- PWA: icon.png en public, manifest con purpose any/maskable
- Auth: caché local de perfil/suscripción para abrir al instante al reabrir app
- Auth: setSessionAndLoadProfile tras login (evita race en PWA)
- Auth: timeouts y redirección a protected cuando ya hay sesión
- EAS: eas.json, scripts deploy:web, workflow, README

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "reconfiguracion-financiera",
+  "name": "finaria",
   "main": "expo-router/entry",
   "version": "1.0.0",
   "scripts": {
@@ -10,6 +10,8 @@
     "ios": "expo start --ios",
     "web": "expo start --web",
     "web:build": "expo export --platform web",
+    "deploy:web": "expo export --platform web && npx eas-cli@latest deploy",
+    "deploy:web:prod": "expo export --platform web && npx eas-cli@latest deploy --prod",
     "lint": "expo lint"
   },
   "dependencies": {
