Migración a Appwrite: funciones, auth, DB, scripts y docs
- Appwrite Functions: validate_linking_code, join_org_with_code, seed_default_categories, award_points (con package.json y API key desde header/env)
- Auth y pantallas usando Appwrite Account y Databases
- Scripts: appwrite-create-collections, create-storage-bucket, seed-lessons, seed-points-rules
- Docs: appwrite-schema, appwrite-auth-setup, appwrite-mcp-setup, appwrite-migration-status
- Eliminado lib/supabase.ts; añadido lib/appwrite.ts

--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,7 @@
-# Supabase (app)
-EXPO_PUBLIC_SUPABASE_URL=https://tu-proyecto.supabase.co
-EXPO_PUBLIC_SUPABASE_ANON_KEY=tu-anon-key
+# Appwrite (app)
+EXPO_PUBLIC_APPWRITE_ENDPOINT=https://nyc.cloud.appwrite.io/v1
+EXPO_PUBLIC_APPWRITE_PROJECT_ID=697cf77a0038f25cd6e6
 
 # Solo para scripts (seed demo). No usar en el cliente.
-# Dashboard → Settings → API → service_role (secret)
-SUPABASE_SERVICE_ROLE_KEY=
+# Dashboard → Project → API Keys → API Key (secret)
+APPWRITE_API_KEY=
