--- a/package.json
+++ b/package.json
@@ -5,6 +5,11 @@
   "scripts": {
     "start": "expo start --web",
     "seed:demo": "node scripts/seed-demo.js",
+    "appwrite:create-collections": "node scripts/appwrite-create-collections.js",
+    "appwrite:create-bucket": "node scripts/appwrite-create-storage-bucket.js",
+    "appwrite:setup": "npm run appwrite:create-collections && npm run appwrite:create-bucket",
+    "appwrite:seed-lessons": "node scripts/seed-lessons-appwrite.js",
+    "appwrite:seed-points-rules": "node scripts/seed-points-rules-appwrite.js",
     "reset-project": "node ./scripts/reset-project.js",
     "android": "expo start --android",
     "ios": "expo start --ios",
@@ -22,7 +27,6 @@
     "@react-navigation/bottom-tabs": "^7.4.0",
     "@react-navigation/elements": "^2.6.3",
     "@react-navigation/native": "^7.1.8",
-    "@supabase/supabase-js": "^2.49.1",
     "@tamagui/config": "^1.118.3",
     "@tamagui/core": "^1.118.3",
     "@tamagui/lucide-icons": "^1.118.3",
@@ -48,11 +52,13 @@
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-native": "0.81.5",
+    "react-native-appwrite": "^0.4.0",
     "react-native-gesture-handler": "~2.28.0",
     "react-native-reanimated": "~4.1.1",
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
     "react-native-svg": "~15.15.0",
+    "react-native-url-polyfill": "^2.0.0",
     "react-native-web": "~0.21.0",
     "react-native-worklets": "0.5.1",
     "tamagui": "^1.118.3",
@@ -60,10 +66,11 @@
   },
   "devDependencies": {
     "@types/react": "~19.1.0",
-    "tailwindcss": "^3.4.17",
-    "typescript": "~5.9.2",
     "eslint": "^9.25.0",
-    "eslint-config-expo": "~10.0.0"
+    "eslint-config-expo": "~10.0.0",
+    "node-appwrite": "^21.1.0",
+    "tailwindcss": "^3.4.17",
+    "typescript": "~5.9.2"
   },
   "private": true
 }
