fix: agregar build scripts para deployment de Appwrite Functions
- Añadido script "build" a package.json de cada función (validate_linking_code, join_org_with_code, seed_default_categories, award_points)
- Añadido script "build" al package.json raíz para evitar errores en deployment
- Actualizado README de funciones con instrucciones específicas para Git deployment (Root directory por función)

--- a/appwrite-functions/join_org_with_code/package.json
+++ b/appwrite-functions/join_org_with_code/package.json
@@ -3,6 +3,9 @@
   "version": "1.0.0",
   "description": "Appwrite Function: join org with linking code (authenticated)",
   "main": "src/main.js",
+  "scripts": {
+    "build": "echo 'No build step'"
+  },
   "dependencies": {
     "node-appwrite": "^11.0.0"
   }
