--- a/appwrite-functions/seed_default_categories/package.json
+++ b/appwrite-functions/seed_default_categories/package.json
@@ -3,6 +3,9 @@
   "version": "1.0.0",
   "description": "Appwrite Function: seed default categories for org/user",
   "main": "src/main.js",
+  "scripts": {
+    "build": "echo 'No build step'"
+  },
   "dependencies": {
     "node-appwrite": "^11.0.0"
   }
